# kiro-proxy-assistant

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  config.yaml.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: CODE_REVIEW.md  KIRO_PROTOCOL.md  USER_GUIDE.md
src/kiro_proxy/: __main__.py  cert_manager.py  cli.py  eventstream.py  kiro_mitmproxy.py  main.py  model_router.py  request_converter.py  response_adapter.py  stats_collector.py
src/kiro_proxy/providers/: __init__.py  direct_provider.py  litellm_provider.py  router.py
tests/: test_eventstream.py  test_integration.py  test_logging.py  test_request_converter.py  test_response_adapter.py
